# Qutee_v2

./: .gitignore  .gitmodules
hardware/: README.md
hardware/STL/: Case_tft v15.stl  Case_tft v18.stl  body_bottom v17.stl  case v11.stl  doubleU v8.stl  full_fdm_plate_mk3.9.3mf  spacer v12.stl  spacer_for_tft v36.stl
hardware/docs/: README.md
simulation/robot_definition/: qutee.xml
software/: CMakeLists.txt  README.md  sdkconfig.defaults
software/docker/: Dockerfile
software/main/: CMakeLists.txt  Kconfig.projbuild  NNQuteeController.hpp  Qutee.cpp  Qutee.hpp  QuteeController.hpp  idf_component.yml  libquteeinterface.mk  main.cpp
software/main/src/qutee_msg/: CMakeLists.txt
software/main/src/qutee_msg/srv/: GetNumParams.srv
